@@ -58,6 +58,7 @@
         "img/select2x2.png",
         "img/select2-spinner.png",
         "img/steamcardexchange.png",
+        "img/decline.png",
         "img/wsgf/4k-gold.png",
         "img/wsgf/4k-silver.png",
         "img/wsgf/4k-limited.png",
