@@ -2,6 +2,7 @@ v7.0
 -----
 + Added the ability to set any number of regional price comparisons
 + Added highlighting and tags back to the Friend Activity page
++ Added a button to easily decline trade offers (even invalid ones)
 + Enhanced Steam will now show bundle savings calculations on bundles with no savings
 : Updated wishlist code to work with the new page layout and design
 : Updated Early Access banners to work with more store sections
